--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,7 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+application_bureau_yasmine_linda_hatim_sofiane/Properties/Settings.settings
+application_bureau_yasmine_linda_hatim_sofiane/Properties/Settings.settings
+application_bureau_yasmine_linda_hatim_sofiane/Properties/Settings.Designer.cs
+application_bureau_yasmine_linda_hatim_sofiane/Properties/Resources.resx
